--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>拼团抢购</p>
             <p><i class="iconfont icon-friend"></i></p>
         </li>
-        <a style="color: inherit;" href="promotion.html"><li class="tabs-bar-li-more">
+        <a style="color: inherit;" href="promotion.html"><li >
             <p>更多</p>
             <p><i class="iconfont icon-menu"></i></p>
         </li></a>
