--- a/coupon.html
+++ b/coupon.html
@@ -20,7 +20,7 @@
 <!--标题-->
 <div class="header">
     <!--菜单-->
-    <div class="coupon-tabs">
+    <div class="cg-coupon-tabs">
         <ul>
             <li class="tab-current"  i="0">离我最近</li>
             <li  i="1">吃喝</li>
@@ -32,7 +32,7 @@
 
 <!--首页-->
 <div id="mescroll0" class="mescroll goods-wrapper">
-    <div id="dataList0" class="data-list goods-wrapper-item coupon">
+    <div id="dataList0" class="data-list goods-wrapper-item cg-coupon">
         <!--<li>
             <img class="pd-img" src="../res/img/pd1.jpg"/>
             <p class="pd-name">商品标题商品标题商品标题商品标题商品标题商品</p>
