--- a/index.html
+++ b/index.html
@@ -22,46 +22,67 @@
 
 <body>
 <!--标题-->
-<a href="../index.html"><div class="header"></div></a>
+<a href="../index.html">
+    <div class="header"></div>
+</a>
 <!--滑动区域-->
 <div id="mescroll" class="mescroll">
     <div class="container">
         <!--模拟的轮播-->
-        <div data-am-widget="slider" class="am-slider am-slider-a1 main-slider" data-am-slider='{&quot;directionNav&quot;:false}'>
+        <div data-am-widget="slider" class="am-slider am-slider-a1 main-slider"
+             data-am-slider='{&quot;directionNav&quot;:false}'>
             <ul class="am-slides">
                 <li>
-                    <a href="http://mihutime.com/shop "><img src="images/banner.png" alt="" class="banner img-responsive"></a>
+                    <a href="http://mihutime.com/shop "><img src="images/banner.png" alt=""
+                                                             class="banner img-responsive"></a>
                 </li>
                 <li>
-                    <a href="http://mihutime.com/shop "><img src="images/banner.png" alt="" class="banner img-responsive"></a>
+                    <a href="http://mihutime.com/shop "><img src="images/banner.png" alt=""
+                                                             class="banner img-responsive"></a>
                 </li>
             </ul>
         </div>
         <div class="menu-button">
-            <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{&quot;directionNav&quot;:false}' data-am-flexslider="{slideshow: false}">
+            <div class="am-slider am-slider-a1">
                 <div class="slider am-slides">
                     <li>
                         <ul class="slider-menu">
-                            <li><a href="###"><img src="images/m9.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m2.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m3.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m4.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m5.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m6.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m7.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m8.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m9.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m2.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m3.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m4.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m5.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m6.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m7.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m8.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
                         </ul>
                     </li>
                     <li>
                         <ul class="slider-menu">
-                            <li><a href="###"><img src="images/m9.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m2.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m3.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m4.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m5.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m6.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m7.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
-                            <li><a href="###"><img src="images/m8.png" class="img-responsive"><span class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m9.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m2.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m3.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m4.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m5.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m6.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m7.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
+                            <li><a href="###"><img src="images/m8.png" class="img-responsive"><span
+                                    class="slider-title">甜点饮品</span></a></li>
                         </ul>
                     </li>
                 </div>
@@ -79,7 +100,7 @@
     </div>
     <!--筛选条件; 模拟列表的重置和演示空布局的使用-->
     <div class="menu-bar">
-        <li class="menu-bar-li"  i="1">
+        <li class="menu-bar-li" i="1">
             <p>优惠券</p>
             <p><i class="iconfont icon-coupons
 "></i></p>
@@ -92,10 +113,12 @@
             <p>拼团抢购</p>
             <p><i class="iconfont icon-friend"></i></p>
         </li>
-        <a style="color: inherit;" href="promotion.html"><li >
-            <p>更多</p>
-            <p><i class="iconfont icon-menu"></i></p>
-        </li></a>
+        <a style="color: inherit;" href="promotion.html">
+            <li>
+                <p>更多</p>
+                <p><i class="iconfont icon-menu"></i></p>
+            </li>
+        </a>
     </div>
     <div class="limit-bar limit-bar-show">
         <hr class="hr1">
@@ -111,7 +134,7 @@
         <hr class="hr1">
         <hr class="hr2">
         <div class="tc-ad">
-            <a href="coupon.html"><img src="images/gwq.png" class="img-responsive" ></a>
+            <a href="coupon.html"><img src="images/gwq.png" class="img-responsive"></a>
         </div>
         <hr class="hr2">
         <hr class="hr1">
@@ -145,6 +168,16 @@
 <script src="./js/index.js" type="text/javascript" charset="utf-8"></script>
 <!--mescroll本身不依赖jq,这里为了模拟发送ajax请求,获取模拟数据-->
 <script src="./res/pdlist1.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    var nums = null;
+    if (nums && nums > 8) {
+        $('.menu-button .am-slider').flexslider(
 
+        );
+    } else if (nums < 9 ||  !nums) {
+        $('.am-slider .am-slides li').css('display', 'block')
+    }
+
+</script>
 
 </html>
