--- a/limit.html
+++ b/limit.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/limit.css">
     <script src="js/rem.js"></script>
-    <script src="js/limit.js"></script>
-</head>
+    <script src="js/limit.js"></script></head>
 
 <body>
 <!--标题-->
