--- a/coupon.html
+++ b/coupon.html
@@ -20,6 +20,7 @@
 <!--标题-->
 <div class="header">
     <!--菜单-->
+    <img src="images/banner2.png" class="img-responsive">
     <div class="cg-coupon-tabs">
         <ul>
             <li class="tab-current"  i="0">离我最近</li>
